--- a/root/partials/auth/login-form.html
+++ b/root/partials/auth/login-form.html
@@ -55,7 +55,7 @@
                 
                 <div class="flex justify-center gap-3 md:gap-4 mb-6" dir="ltr">
                     <template x-for="(n, index) in 4" :key="index">
-                        <input type="tel" maxlength="1" x-ref="`otp_${index}`" class="w-16 h-20 text-center text-2xl font-bold border-2 border-gray-200 rounded-lg focus:outline-none focus:border-gray-800 transition-all" @keyup="if ($event.target.value.length === 1) $refs[`otp_${index + 1}`]?.focus();" @keyup.backspace="if ($event.target.value.length === 0) $refs[`otp_${index - 1}`]?.focus();">
+                        <input type="tel" maxlength="1" class="w-16 h-20 text-center text-2xl font-bold border-2 border-gray-200 rounded-lg focus:outline-none focus:border-gray-800 transition-all" @keyup="if ($event.target.value.length === 1) $event.target.nextElementSibling?.focus();" @keyup.backspace="if ($event.target.value.length === 0) $event.target.previousElementSibling?.focus();">
                     </template>
                 </div>
 
