--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -15,6 +15,7 @@
 @import "./components/_cards.css";
 @import "./components/_buttons.css";
 @import "./components/_notifications.css";
+@import "./components/_icons.css";
 
 /* ۴. وارد کردن استایل‌های مخصوص صفحات */
 @import "./pages/_login.css";
